clang/test/BSC/Negative/Ownership/Borrow/borrow_wrapped_with_parens/borrow_wrapped_with_parens.cbs
// RUN: %clang_cc1 -verify %s

typedef struct {
  int a;
} A;

typedef struct {
  int a;
  int b;
} B;

B *_Borrow borrow_bak_offset(A *_Owned *_Borrow, int);
void use(B *_Borrow header);

A *_Owned test1() {
  A *_Owned block = nullptr;
  B *_Borrow header = nullptr;
  header = borrow_bak_offset((&_Mut block), sizeof(B)); // expected-note {{`block` is borrowed here}}
  A *_Owned block2 = block; // expected-error {{cannot move out of `block` because it is borrowed}}
  use(header);
  return block2;
}

A *_Owned test2() {
  A *_Owned block = nullptr;
  B *_Borrow header = nullptr;
  header = borrow_bak_offset(((&_Mut block)), sizeof(B)); // expected-note {{`block` is borrowed here}}
  A *_Owned block2 = block; // expected-error {{cannot move out of `block` because it is borrowed}}
  use(header);
  return block2;
}

#define GET(s, pdate, ptime, pui) \
  do { \
    (pdate)->a = (s)->a; \
    (ptime)->b = (s)->b; \
    (*pui)     = (s)->c; \
  } while(0)

typedef struct {
  int a;
  int b;
  unsigned int c;
} S;

typedef struct {
  int a;
} Date;

typedef struct {
  int b;
} Time;

_Safe unsigned int foo(S *_Borrow);

_Safe unsigned int test(Date *_Borrow date, Time *_Borrow time, unsigned int *_Borrow pui) {
  S s = {0};
  GET(&_Mut s, date, time, pui);
  return 1;
}
